# wind-microclimate

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
src/wind_microclimate/: Thumbs.db  wind_microclimate.py
src/wind_microclimate/input/: user_input.py
src/wind_microclimate/post_proc/: helpers.py  lawson.py  lawson_epw.py  lawson_weibull.py  post_proc.py  vr.py
src/wind_microclimate/post_proc/paraview/: pv_helpers.py  pv_lawson.py  pv_vr.py
src/wind_microclimate/post_proc/scripts/: pv_helpers.py  pv_lawson.py  pv_vr.py
src/wind_microclimate/pre_proc/: case.py  mesh.py  pre_proc.py  template.py  wind_csv.py  wind_logarithmic.py
src/wind_microclimate/solver/: solver.py
src/wind_microclimate/weather/: epw.py  weather.py  weibull.py
tests/: conftest.py  test_PACKAGE_NAME.py
