[metadata]
name = wind_microclimate
version = 1.0
description = Python application automating the setup, running and 
              post-processing multiple CFD simulations for the 
              purpose of Wind Microclimate Assessments.
author = Adam Wownysz
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    wind_microclimate
    wind_microclimate.input
    wind_microclimate.post_proc
    wind_microclimate.pre_proc
    wind_microclimate.solver
    wind_microclimate.weather
install_requires =
    matplotlib>=3.4
    numpy>=1.21
    pandas>=1.4
    pyepw>=0.1
    PyFoam>=2021.6
    scipy>=1.7
    reliability>=0.8.3
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
wind_microclimate = py.typed

[options.entry_points]
console_scripts =
    wind-microclimate = wind_microclimate.wind_microclimate:main

[flake8]
max-line-length = 79
